Loop Cut and Slide from menu is waiting for cursor input #113112

Closed
opened 2023-10-01 14:03:54 +02:00 by Julien Kaspar · 4 comments
Member

System Information
Operating system: Linux-6.5.4-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: AMD Radeon RX 7900 XT (gfx1100, LLVM 16.0.6, DRM 3.54, 6.5.4-gentoo) AMD 4.6 (Core Profile) Mesa 23.3.0-devel (git-8d2dcd55d7)

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-09-30 22:20, hash: 995aa08c7951
Worked:

Short description of error
When executing modal operators from menus they use an additional flag to have the modal wait for an additional cursor click before starting.
This is very useful.

The operator "Loop Cut and Slide" unfortunately also uses this even though it doesn't need to. This results in the user having to click twice to be able to cut & slide.

Exact steps for others to reproduce the error

  • Switch to edit mode
  • Use Header -> Edge -> Loop Cut and Slide
  • Try to insert a loop cut and slide
**System Information** Operating system: Linux-6.5.4-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: AMD Radeon RX 7900 XT (gfx1100, LLVM 16.0.6, DRM 3.54, 6.5.4-gentoo) AMD 4.6 (Core Profile) Mesa 23.3.0-devel (git-8d2dcd55d7) **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-09-30 22:20, hash: `995aa08c7951` Worked: **Short description of error** When executing modal operators from menus they use an additional flag to have the modal wait for an additional cursor click before starting. This is very useful. The operator "Loop Cut and Slide" unfortunately also uses this even though it doesn't need to. This results in the user having to click twice to be able to cut & slide. **Exact steps for others to reproduce the error** - Switch to edit mode - Use Header -> Edge -> Loop Cut and Slide - Try to insert a loop cut and slide
Julien Kaspar added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-01 14:03:55 +02:00
Member

Can confirm. I'll check.

Can confirm. I'll check.
Pratik Borhade added
Module
User Interface
Status
Confirmed
Interest
Modeling
and removed
Status
Needs Triage
labels 2023-10-02 08:42:12 +02:00
Pratik Borhade self-assigned this 2023-10-02 08:42:20 +02:00
Member

This is because TRANSFORM_OT_edge_slide operator has OPTYPE_DEPENDS_ON_CURSOR flag set.
That's why invoke call to this operator is not sent in WM_operator_name_call_ptr_with_depends_on_cursor.
Do we really need cursor input for edge slide operator? If no, then we can simply remove that flag (which will fix this bug too)
@JulienKaspar ^

This is because `TRANSFORM_OT_edge_slide` operator has `OPTYPE_DEPENDS_ON_CURSOR` flag set. That's why invoke call to this operator is not sent in `WM_operator_name_call_ptr_with_depends_on_cursor`. Do we really need cursor input for `edge slide` operator? If no, then we can simply remove that flag (which will fix this bug too) @JulienKaspar ^
Author
Member

Yes.
Since edge slide is not relying on the exact cursor position and other transform operators are not using OPTYPE_DEPENDS_ON_CURSOR I think it's a good call to remove that flag for edge slide as well.

Yes. Since edge slide is not relying on the exact cursor position and other transform operators are not using `OPTYPE_DEPENDS_ON_CURSOR` I think it's a good call to remove that flag for edge slide as well.
Member

Thanks. I'll make a quick PR then

Thanks. I'll make a quick PR then
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-23 13:05:58 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113112
No description provided.